--- a/demo/base/_grid.scss
+++ b/demo/base/_grid.scss
@@ -28,11 +28,6 @@ $default-grid: $my-grid;
         'prefix': '',
         'names': (
             'column': 'column',
-            'horizontal-alignments': (
-                left: 'left',
-                center: 'middle',
-                right: 'right',
-            ),
         ),
     )
 );
